--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -48,23 +48,23 @@
 
 - name: py26 | Download
   get_url:
-    url=https://www.python.org/ftp/python/2.6.9/Python-2.6.9.tar.xz
-    dest=/tmp/py26.tar.xz
-    cheksum=md5:933a811f11e3db3d73ae492f6c3a7a76
+    url="{{ py26_url }}"
+    dest="{{ py26_tar_file }}"
+    checksum="md5:{{ py26_md5 }}"
   when: python_26
 
 - name: py27 | Download
   get_url:
-    url=https://www.python.org/ftp/python/2.7.11/Python-2.7.11.tar.xz
-    dest=/tmp/py27.tar.xz
-    checksum=md5:1dbcc848b4cd8399a8199d000f9f823c
+    url="{{ py27_url }}"
+    dest="{{ py27_tar_file }}"
+    checksum="md5:{{ py27_md5 }}"
   when: python_27
 
 - name: py35 | Download
   get_url:
-    url=https://www.python.org/ftp/python/3.5.1/Python-3.5.1.tar.xz
-    dest=/tmp/py35.tar.xz
-    checksum=md5:e9ea6f2623fffcdd871b7b19113fde80
+    url="{{ py35_url }}"
+    dest="{{ py35_tar_file }}"
+    checksum="md5:{{ py35_md5 }}"
   when: python_35
 
 ##
@@ -73,21 +73,21 @@
 
 - name: py26 | Uncompress
   unarchive:
-    src=/tmp/py26.tar.xz
+    src={{ py26_tar_file }}
     dest=/tmp
     copy=no
   when: python_26
 
 - name: py27 | Uncompress
   unarchive:
-    src=/tmp/py27.tar.xz
+    src={{ py27_tar_file }}
     dest=/tmp
     copy=no
   when: python_27
 
 - name: py35 | Uncompress
   unarchive:
-    src=/tmp/py35.tar.xz
+    src={{ py35_tar_file }}
     dest=/tmp
     copy=no
   when: python_35
@@ -100,9 +100,9 @@
   become: true
   shell: "{{ item }}"
   args:
-    chdir: /tmp/Python-2.6.9
+    chdir: "{{ py26_sources }}"
   with_items:
-    - ./configure --prefix /srv/python2.6.9
+    - "./configure --prefix {{ py26_install }}"
     - make
     - make install
   when: python_26
@@ -111,9 +111,9 @@
   become: true
   shell: "{{ item }}"
   args:
-    chdir: /tmp/Python-2.7.11
+    chdir: "{{ python_27_sources }}"
   with_items:
-    - ./configure --prefix /srv/python2.7.11
+    - "./configure --prefix {{ py27_install }}"
     - make
     - make install
   when: python_27
@@ -122,9 +122,9 @@
   become: true
   shell: "{{ item }}"
   args:
-    chdir: /tmp/Python-3.5.1
+    chdir: "{{ python_35_sources }}"
   with_items:
-    - ./configure --prefix /srv/python3.5.1
+    - "./configure --prefix {{ py35_install }}"
     - make
     - make install
   when: python_35
