Split tasks into smaller yml files
To make thing easier, hopefully.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,203 +1,6 @@
 ---
-##
-# Dependencies
-##
-- name: Python deps | Install compile time depdendencies
-  become: true
-  apt:
-    name={{ item }}
-    state=latest
-  with_items:
-    - autotools-dev
-    - blt-dev
-    - bzip2
-    - dpkg-dev
-    - g++-multilib
-    - gcc-multilib
-    - libbluetooth-dev
-    - libbz2-dev
-    - libexpat1-dev
-    - libffi-dev
-    - libffi6
-    - libffi6-dbg
-    - libgdbm-dev
-    - libgpm2
-    - libncursesw5-dev
-    - libreadline-dev
-    - libsqlite3-dev
-    - libssl-dev
-    - libtinfo-dev
-    - mime-support
-    - net-tools
-    - netbase
-    - quilt
-    - tk-dev
-    - zlib1g-dev
 
-- name: Python 3.5 deps | Install compile time dependencies
-  become: true
-  apt:
-    name={{ item }}
-    state=latest
-  with_items:
-    - liblzma-dev
-  when: python_35
+- include: deps.yml
+- include: python.yml
+- include: venv.yml
 
-##
-# Download
-##
-
-- name: py26 | Download
-  get_url:
-    url="{{ py26_url }}"
-    dest="{{ py26_tar_file }}"
-    checksum="md5:{{ py26_md5 }}"
-  when: python_26
-
-- name: py27 | Download
-  get_url:
-    url="{{ py27_url }}"
-    dest="{{ py27_tar_file }}"
-    checksum="md5:{{ py27_md5 }}"
-  when: python_27
-
-- name: py35 | Download
-  get_url:
-    url="{{ py35_url }}"
-    dest="{{ py35_tar_file }}"
-    checksum="md5:{{ py35_md5 }}"
-  when: python_35
-
-##
-# Uncompress
-##
-
-- name: py26 | Uncompress
-  unarchive:
-    src={{ py26_tar_file }}
-    dest=/tmp
-    copy=no
-  when: python_26
-
-- name: py27 | Uncompress
-  unarchive:
-    src={{ py27_tar_file }}
-    dest=/tmp
-    copy=no
-  when: python_27
-
-- name: py35 | Uncompress
-  unarchive:
-    src={{ py35_tar_file }}
-    dest=/tmp
-    copy=no
-  when: python_35
-
-##
-# Compile and install
-##
-
-- name: py26 | Compile and install
-  become: true
-  shell: "{{ item }}"
-  args:
-    chdir: "{{ py26_sources }}"
-  with_items:
-    - "./configure --prefix {{ py26_install }}"
-    - make
-    - make install
-  when: python_26
-
-- name: py27 | Compile and install
-  become: true
-  shell: "{{ item }}"
-  args:
-    chdir: "{{ py27_sources }}"
-  with_items:
-    - "./configure --prefix {{ py27_install }}"
-    - make
-    - make install
-  when: python_27
-
-- name: py35 | Compile and install
-  become: true
-  shell: "{{ item }}"
-  args:
-    chdir: "{{ py35_sources }}"
-  with_items:
-    - "./configure --prefix {{ py35_install }}"
-    - make
-    - make install
-  when: python_35
-
-##
-# Virtualenv (only for 2.x)
-##
-
-- name: virtualenv | Download
-  get_url:
-    url="{{ venv_url }}"
-    dest="{{ venv_tar_file }}"
-    checksum="md5:{{ venv_md5 }}"
-  when: python_26 or python_27
-
-- name: virtualenv | Uncompress
-  unarchive:
-    src="{{ venv_tar_file }}"
-    dest=/tmp
-    copy=no
-  when: python_26 or python_27
-
-- name: py26 | Install virtualenv
-  become: true
-  shell: "{{ item }}"
-  args:
-    chdir: "{{ venv_sources }}"
-  with_items:
-    - "{{ py26_bin }} setup.py install"
-  when: python_26
-
-- name: py27 | Install virtualenv
-  become: true
-  shell: "{{ item }}"
-  args:
-    chdir: "{{ venv_sources }}"
-  with_items:
-    - "{{ py27_bin }} setup.py install"
-  when: python_27
-
-##
-# Pillow
-##
-
-- name: Pillow deps | Install compile time depdendencies
-  become: true
-  apt:
-    name={{ item }}
-    state=latest
-  with_items:
-    - cmake
-    - libfreetype6-dev
-    - libjpeg8-dev
-    - liblcms2-dev
-    - libtiff5-dev
-    - libwebp-dev
-    - tcl8.6-dev
-    - tk8.6-dev
-  when: pillow
-
-##
-# lxml
-##
-
-- name: lxml deps | Install compile time dependencies
-  become: true
-  apt:
-    name={{ item }}
-    state=latest
-  with_items:
-    - libxml2
-    - libxml2-dev
-    - libxslt1.1
-    - libxslt1-dev
-  when: lxml
