--- a/tasks/python.yml
+++ b/tasks/python.yml
@@ -4,6 +4,12 @@
 # Check if python versions are already installed
 ##
 
+- name: py24 | Check that py24 is still not installed
+  become: true
+  stat: path="{{ py24_bin }}"
+  register: py24_already_installed
+  ignore_errors: True
+
 - name: py26 | Check that py26 is still not installed
   become: true
   stat: path="{{ py26_bin }}"
@@ -25,6 +31,13 @@
 ##
 # Download
 ##
+
+- name: py24 | Download
+  get_url:
+    url="{{ py24_url }}"
+    dest="{{ py24_tar_file }}"
+    checksum="md5:{{ py24_md5 }}"
+  when: python_24 and py24_already_installed.stat.exists == false
 
 - name: py26 | Download
   get_url:
@@ -50,6 +63,14 @@
 ##
 # Uncompress
 ##
+
+- name: py24 | Uncompress
+  unarchive:
+    src={{ py24_tar_file }}
+    dest=/tmp
+    copy=no
+    creates="{{ py24_sources }}"
+  when: python_24 and py24_already_installed.stat.exists == false
 
 - name: py26 | Uncompress
   unarchive:
@@ -78,6 +99,17 @@
 ##
 # Compile and install
 ##
+
+- name: py24 | Compile and install
+  become: true
+  command: "{{ item }}"
+  args:
+    chdir: "{{ py24_sources }}"
+  with_items:
+    - "./configure --prefix {{ py24_install }}"
+    - make
+    - make install
+  when: python_24 and py24_already_installed.stat.exists == false
 
 - name: py26 | Compile and install
   become: true
