--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -16,39 +16,42 @@ lxml: false
 ##
 # fine grained settings
 ##
-
 base_install_folder: "/srv"
 
 py24_version: "2.4.6"
+py24_major_version: "{{ py24_version|truncate(3, killwords=true, end='') }}"
 py24_url: "https://www.python.org/ftp/python/{{ py24_version }}/Python-{{ py24_version }}.tar.bz2"
 py24_md5: "76083277f6c7e4d78992f36d7ad9018d"
 py24_tar_file: "/tmp/py{{ py24_version }}.tar.bz2"
 py24_sources: "/tmp/Python-{{ py24_version }}"
-py24_install: "{{ base_install_folder }}/python{{ py24_version }}"
+py24_install: "{{ base_install_folder }}/python{{ py24_major_version }}"
 py24_bin: "{{ py24_install }}/bin/python2.4"
 
 py26_version: "2.6.9"
+py26_major_version: "{{ py26_version|truncate(3, killwords=true, end='') }}"
 py26_url: "https://www.python.org/ftp/python/{{ py26_version }}/Python-{{ py26_version }}.tar.xz"
 py26_md5: "933a811f11e3db3d73ae492f6c3a7a76"
 py26_tar_file: "/tmp/py{{ py26_version }}.tar.xz"
 py26_sources: "/tmp/Python-{{ py26_version }}"
-py26_install: "{{ base_install_folder }}/python{{ py26_version }}"
+py26_install: "{{ base_install_folder }}/python{{ py26_major_version }}"
 py26_bin: "{{ py26_install }}/bin/python2.6"
 
 py27_version: "2.7.11"
+py27_major_version: "{{ py27_version|truncate(3, killwords=true, end='') }}"
 py27_url: "https://www.python.org/ftp/python/{{ py27_version }}/Python-{{ py27_version }}.tar.xz"
 py27_md5: "1dbcc848b4cd8399a8199d000f9f823c"
 py27_tar_file: "/tmp/py{{ py27_version }}.tar.xz"
 py27_sources: "/tmp/Python-{{ py27_version }}"
-py27_install: "{{ base_install_folder }}/python{{ py27_version }}"
+py27_install: "{{ base_install_folder }}/python{{ py27_major_version }}"
 py27_bin: "{{ py27_install }}/bin/python2.7"
 
 py35_version: "3.5.1"
+py35_major_version: "{{ py35_version|truncate(3, killwords=true, end='') }}"
 py35_url: "https://www.python.org/ftp/python/{{ py35_version }}/Python-{{ py35_version }}.tar.xz"
 py35_md5: "e9ea6f2623fffcdd871b7b19113fde80"
 py35_tar_file: "/tmp/py{{ py35_version }}.tar.xz"
 py35_sources: "/tmp/Python-{{ py35_version }}"
-py35_install: "{{ base_install_folder }}/python{{ py35_version }}"
+py35_install: "{{ base_install_folder }}/python{{ py35_major_version }}"
 py35_bin: "{{ py35_install }}/bin/python3.5"
 
 venv24_url: "http://pypi.python.org/packages/source/v/virtualenv/virtualenv-1.7.2.tar.gz"
