--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -24,7 +24,8 @@ py24_url: "https://www.python.org/ftp/python/{{ py24_version }}/Python-{{ py24_v
 py24_md5: "76083277f6c7e4d78992f36d7ad9018d"
 py24_tar_file: "/tmp/py{{ py24_version }}.tar.bz2"
 py24_sources: "/tmp/Python-{{ py24_version }}"
-py24_install: "{{ base_install_folder }}/python{{ py24_major_version }}"
+py24_install: "{{ base_install_folder }}/python{{ py24_version }}"
+py24_symlink_target: "{{ py24_install }}"
 py24_bin: "{{ py24_install }}/bin/python2.4"
 
 py26_version: "2.6.9"
@@ -33,7 +34,8 @@ py26_url: "https://www.python.org/ftp/python/{{ py26_version }}/Python-{{ py26_v
 py26_md5: "933a811f11e3db3d73ae492f6c3a7a76"
 py26_tar_file: "/tmp/py{{ py26_version }}.tar.xz"
 py26_sources: "/tmp/Python-{{ py26_version }}"
-py26_install: "{{ base_install_folder }}/python{{ py26_major_version }}"
+py26_install: "{{ base_install_folder }}/python{{ py26_version }}"
+py26_symlink_target: "{{ py26_install }}"
 py26_bin: "{{ py26_install }}/bin/python2.6"
 
 py27_version: "2.7.11"
@@ -42,7 +44,8 @@ py27_url: "https://www.python.org/ftp/python/{{ py27_version }}/Python-{{ py27_v
 py27_md5: "1dbcc848b4cd8399a8199d000f9f823c"
 py27_tar_file: "/tmp/py{{ py27_version }}.tar.xz"
 py27_sources: "/tmp/Python-{{ py27_version }}"
-py27_install: "{{ base_install_folder }}/python{{ py27_major_version }}"
+py27_install: "{{ base_install_folder }}/python{{ py27_version }}"
+py27_symlink_target: "{{ py27_install }}"
 py27_bin: "{{ py27_install }}/bin/python2.7"
 
 py35_version: "3.5.1"
@@ -51,7 +54,8 @@ py35_url: "https://www.python.org/ftp/python/{{ py35_version }}/Python-{{ py35_v
 py35_md5: "e9ea6f2623fffcdd871b7b19113fde80"
 py35_tar_file: "/tmp/py{{ py35_version }}.tar.xz"
 py35_sources: "/tmp/Python-{{ py35_version }}"
-py35_install: "{{ base_install_folder }}/python{{ py35_major_version }}"
+py35_install: "{{ base_install_folder }}/python{{ py35_version }}"
+py35_symlink_target: "{{ py35_install }}"
 py35_bin: "{{ py35_install }}/bin/python3.5"
 
 venv24_url: "http://pypi.python.org/packages/source/v/virtualenv/virtualenv-1.7.2.tar.gz"
