--- a/tasks/python.yml
+++ b/tasks/python.yml
@@ -191,3 +191,14 @@
     - make
     - make install
   when: python_35 and py35_already_installed.stat.exists == false
+
+- name: create python_major_version symlinks
+  file:
+    src={{ item.src }}
+    dest={{ item.dest }}
+    state=link
+  with_items:
+    - { src: "{{ py24_install }}", dest: '{{ base_install_folder }}/python{{ py24_major_version }}'}
+    - { src: "{{ py26_install }}", dest: '{{ base_install_folder }}/python{{ py26_major_version }}'}
+    - { src: "{{ py27_install }}", dest: '{{ base_install_folder }}/python{{ py27_major_version }}'}
+    - { src: "{{ py35_install }}", dest: '{{ base_install_folder }}/python{{ py35_major_version }}'}
