To create the symlink one needs to be root

--- a/tasks/python.yml
+++ b/tasks/python.yml
@@ -197,6 +197,7 @@
 ##
 
 - name: p24 | Create python_major_version symlink
+  become: true
   file:
     src={{ py24_install }}
     dest='{{ base_install_folder }}/python{{ py24_major_version }}'
@@ -204,6 +205,7 @@
   when: python_24 and py24_already_installed.stat.exists == false
 
 - name: p26 | Create python_major_version symlink
+  become: true
   file:
     src={{ py26_install }}
     dest='{{ base_install_folder }}/python{{ py26_major_version }}'
@@ -211,6 +213,7 @@
   when: python_26 and py26_already_installed.stat.exists == false
 
 - name: p27 | Create python_major_version symlink
+  become: true
   file:
     src={{ py27_install }}
     dest='{{ base_install_folder }}/python{{ py27_major_version }}'
@@ -218,6 +221,7 @@
   when: python_27 and py27_already_installed.stat.exists == false
 
 - name: p35 | Create python_major_version symlink
+  become: true
   file:
     src={{ py35_install }}
     dest='{{ base_install_folder }}/python{{ py35_major_version }}'
