--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,12 +3,10 @@ galaxy_info:
   author: Gil Forcada Codinachs
   description: Install all dependencies and compile any version of Python
   license: BSD
-  min_ansible_version: 2.0
+  min_ansible_version: 2.2
   platforms:
     - name: Ubuntu
       versions:
         - trusty
         - xenial
-  galaxy_tags:
-    - development
-    - python
+dependencies: []
