Fix major versions numbers

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -19,7 +19,7 @@ lxml: false
 base_install_folder: "/srv"
 
 py24_version: "2.4.6"
-py24_major_version: "{{ py24_version|truncate(3, killwords=true, end='') }}"
+py24_major_version: "2.4"
 py24_url: "https://www.python.org/ftp/python/{{ py24_version }}/Python-{{ py24_version }}.tar.bz2"
 py24_md5: "76083277f6c7e4d78992f36d7ad9018d"
 py24_tar_file: "/tmp/py{{ py24_version }}.tar.bz2"
@@ -29,7 +29,7 @@ py24_symlink_target: "{{ py24_install }}"
 py24_bin: "{{ py24_install }}/bin/python2.4"
 
 py26_version: "2.6.9"
-py26_major_version: "{{ py26_version|truncate(3, killwords=true, end='') }}"
+py26_major_version: "2.6"
 py26_url: "https://www.python.org/ftp/python/{{ py26_version }}/Python-{{ py26_version }}.tar.xz"
 py26_md5: "933a811f11e3db3d73ae492f6c3a7a76"
 py26_tar_file: "/tmp/py{{ py26_version }}.tar.xz"
@@ -39,7 +39,7 @@ py26_symlink_target: "{{ py26_install }}"
 py26_bin: "{{ py26_install }}/bin/python2.6"
 
 py27_version: "2.7.15"
-py27_major_version: "{{ py27_version|truncate(3, killwords=true, end='') }}"
+py27_major_version: "2.7"
 py27_url: "https://www.python.org/ftp/python/{{ py27_version }}/Python-{{ py27_version }}.tar.xz"
 py27_md5: "a80ae3cc478460b922242f43a1b4094d"
 py27_tar_file: "/tmp/py{{ py27_version }}.tar.xz"
@@ -49,7 +49,7 @@ py27_symlink_target: "{{ py27_install }}"
 py27_bin: "{{ py27_install }}/bin/python2.7"
 
 py36_version: "3.6.5"
-py36_major_version: "{{ py36_version|truncate(3, killwords=true, end='') }}"
+py36_major_version: "3.6"
 py36_url: "https://www.python.org/ftp/python/{{ py36_version }}/Python-{{ py36_version }}.tar.xz"
 py36_md5: "9f49654a4d6f733ff3284ab9d227e9fd"
 py36_tar_file: "/tmp/py{{ py36_version }}.tar.xz"
