--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,6 +4,7 @@
 - include: python24.yml
 - include: python26.yml
 - include: python27.yml
+- include: python35.yml
 - include: python36.yml
 - include: venv.yml
 
