Refactor: use a dictionary to store all py24 data

--- a/tasks/python24.yml
+++ b/tasks/python24.yml
@@ -2,36 +2,36 @@
 
 - name: py24 | Check that py24 is still not installed
   become: true
-  stat: path="{{ py24_bin }}"
+  stat: path="{{ py24.bin }}"
   register: py24_already_installed
   ignore_errors: True
 
 - name: py24 | Download
   get_url:
-    url="{{ py24_url }}"
-    dest="{{ py24_tar_file }}"
-    checksum="md5:{{ py24_md5 }}"
+    url="{{ py24.url }}"
+    dest="{{ py24.tar_file }}"
+    checksum="md5:{{ py24.md5 }}"
   when: python_24 and py24_already_installed.stat.exists == false
 
 - name: py24 | Uncompress
   unarchive:
-    src={{ py24_tar_file }}
+    src={{ py24.tar_file }}
     dest=/tmp
     copy=no
-    creates="{{ py24_sources }}"
+    creates="{{ py24.sources }}"
   when: python_24 and py24_already_installed.stat.exists == false
 
 - name: py24 | Configure sources
   become: true
-  command: "./configure --prefix {{ py24_install }}"
+  command: "./configure --prefix {{ py24.install }}"
   args:
-    chdir: "{{ py24_sources }}"
+    chdir: "{{ py24.sources }}"
   when: python_24 and py24_already_installed.stat.exists == false
 
 - name: py24 | Tweak sources
   become: true
   lineinfile:
-    dest="{{ py24_sources }}/Modules/Setup"
+    dest="{{ py24.sources }}/Modules/Setup"
     regexp=^#zlib(.*)
     line=zlib\1
     backrefs=yes
@@ -41,7 +41,7 @@
   become: true
   command: "{{ item }}"
   args:
-    chdir: "{{ py24_sources }}"
+    chdir: "{{ py24.sources }}"
   with_items:
     - make
     - make install
@@ -50,7 +50,7 @@
 - name: p24 | Create python_major_version symlink
   become: true
   file:
-    src={{ py24_install }}
-    dest='{{ base_install_folder }}/python{{ py24_major_version }}'
+    src={{ py24.install }}
+    dest='{{ base_install_folder }}/python{{ py24.major_version }}'
     state=link
   when: python_24 and py24_already_installed.stat.exists == false
