--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -13,20 +13,23 @@ python_36: true
 pillow: false
 lxml: false
 
+versions:
+  py24: "2.4.6"
 
 ##
 # fine grained settings
 ##
 base_install_folder: "/srv"
 
-py24_version: "2.4.6"
-py24_major_version: "2.4"
-py24_url: "https://www.python.org/ftp/python/{{ py24_version }}/Python-{{ py24_version }}.tar.bz2"
-py24_md5: "76083277f6c7e4d78992f36d7ad9018d"
-py24_tar_file: "/tmp/py{{ py24_version }}.tar.bz2"
-py24_sources: "/tmp/Python-{{ py24_version }}"
-py24_install: "{{ base_install_folder }}/python{{ py24_version }}"
-py24_bin: "{{ py24_install }}/bin/python2.4"
+py24:
+  version: "{{ versions.py24 }}"
+  major_version: "2.4"
+  url: "https://www.python.org/ftp/python/{{ versions.py24 }}/Python-{{ versions.py24 }}.tar.bz2"
+  md5: "76083277f6c7e4d78992f36d7ad9018d"
+  tar_file: "/tmp/py{{ versions.py24 }}.tar.bz2"
+  sources: "/tmp/Python-{{ versions.py24 }}"
+  install: "{{ base_install_folder }}/python{{ versions.py24 }}"
+  bin: "{{ base_install_folder }}/python{{ versions.py24 }}/bin/python2.4"
 
 py26_version: "2.6.9"
 py26_major_version: "2.6"
