--- a/tasks/python26.yml
+++ b/tasks/python26.yml
@@ -2,36 +2,36 @@
 
 - name: py26 | Check that py26 is still not installed
   become: true
-  stat: path="{{ py26_bin }}"
+  stat: path="{{ py26.bin }}"
   register: py26_already_installed
   ignore_errors: True
 
 - name: py26 | Download
   get_url:
-    url="{{ py26_url }}"
-    dest="{{ py26_tar_file }}"
-    checksum="md5:{{ py26_md5 }}"
+    url="{{ py26.url }}"
+    dest="{{ py26.tar_file }}"
+    checksum="md5:{{ py26.md5 }}"
   when: python_26 and py26_already_installed.stat.exists == false
 
 - name: py26 | Uncompress
   unarchive:
-    src={{ py26_tar_file }}
+    src={{ py26.tar_file }}
     dest=/tmp
     copy=no
-    creates="{{ py26_sources }}"
+    creates="{{ py26.sources }}"
   when: python_26 and py26_already_installed.stat.exists == false
 
 - name: py26 | Configure sources
   become: true
-  command: "./configure --prefix {{ py26_install }}"
+  command: "./configure --prefix {{ py26.install }}"
   args:
-    chdir: "{{ py26_sources }}"
+    chdir: "{{ py26.sources }}"
   when: python_26 and py26_already_installed.stat.exists == false
 
 - name: py26 | Tweak sources
   become: true
   lineinfile:
-    dest="{{ py26_sources }}/Modules/Setup"
+    dest="{{ py26.sources }}/Modules/Setup"
     regexp=^#zlib(.*)
     line=zlib\1
     backrefs=yes
@@ -40,7 +40,7 @@
 - name: py26 | Tweak sources
   become: true
   lineinfile:
-    dest="{{ py26_sources }}/Modules/Setup"
+    dest="{{ py26.sources }}/Modules/Setup"
     regexp=^#_sha256(.*)
     line=_sha256\1
     backrefs=yes
@@ -49,7 +49,7 @@
 - name: py26 | Tweak sources
   become: true
   lineinfile:
-    dest="{{ py26_sources }}/Modules/Setup"
+    dest="{{ py26.sources }}/Modules/Setup"
     regexp=^#_sha512(.*)
     line=_sha512\1
     backrefs=yes
@@ -59,7 +59,7 @@
   become: true
   command: "{{ item }}"
   args:
-    chdir: "{{ py26_sources }}"
+    chdir: "{{ py26.sources }}"
   with_items:
     - make
     - make install
@@ -68,7 +68,7 @@
 - name: py26 | Create python_major_version symlink
   become: true
   file:
-    src={{ py26_install }}
-    dest='{{ base_install_folder }}/python{{ py26_major_version }}'
+    src={{ py26.install }}
+    dest='{{ base_install_folder }}/python{{ py26.major_version }}'
     state=link
   when: python_26 and py26_already_installed.stat.exists == false
